dsl2/src/test/resources/parsing/invalid/bad_type/function_call_bad_args.uss
void foo(int a, string b) {
    console.info("a = " + a + ", b = " + b);
}

foo(12, 4567);
